--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,142 @@
-.App {
-  text-align: center;
+body{
+    margin: 0;
+    padding: 0;
+}
+.nav{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 15px 50px;
+    color:black;
+    font-weight: bold;
+    background-color: #f1f0f0;
+    font-size: 30px;
+}
+.search-bar{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 15px auto;
+}
+.search-icon{
+    background-color: rgb(212, 207, 207);
+    width:35px;
+    text-align: center;
+    border-radius: 4px;
+    margin-left: 5px;;
+}
+input{
+    border:0px;
+    border-bottom: 1px solid black;
+}
+input:focus{
+    outline: none;
+}
+.filters{
+    display: flex;
+    flex-direction: column;
+    width:25%;
+    padding: 15px;
+    margin:25px;
+    font-weight:500;
+    box-shadow: 0px 0px 5px 2px rgb(230, 224, 224);
+    border-radius: 10px;
+    height:80vh;
+    position:sticky
+}
+header{
+    font-weight: 700;
+}
+.category{
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 10px 0;
+}
+.products{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    padding: 15px;
+    margin:10px;
+    font-weight:400;
+}
+.display{
+    display: flex;
+    justify-content: space-around;
+}
+.products{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    grid-gap: 25px;
+    overflow: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card{
+    box-shadow: 0px 0px 5px 5px  rgb(230, 224, 224);
+    border-radius: 5px;
+    padding: 5px;
+}
+.card-footer{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 15px;
+}
+.card-image img{
+    max-width: 100%; height: auto; 
+}
+.add-btn{
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+.badge:after{
+    content:attr(value);
+    font-size:15px;
+    font-weight: 700;
+    background: white;
+    color: black;
+    border-radius:50%;
+    border: 2px solid black;
+    padding: 0 5px;
+    position:relative;
+    left:-10px;
+    top:-20px;
+    opacity:0.9;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/* Cart-CSS */
+
+.item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.item img{
+    max-width: 100%; height: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.item-detail{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+@media screen and (max-width:768px) {
+    .products{
+        grid-template-columns:1fr 1fr;
+    }
+}
+@media screen and (max-width:576px) {
+    .products{
+        grid-template-columns:1fr;
+    }
+    .nav{
+        font-size: 20px;
+    }
 }
