--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,11 @@ header{
     justify-content: center;
 }
 
-
+.loading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 @media screen and (max-width:768px) {
     .products{
         grid-template-columns:1fr 1fr;
