--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ header{
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
 }
 
