--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body{
     font-size: 30px;
 }
 .search-bar{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -23,7 +24,10 @@ body{
     width:35px;
     text-align: center;
     border-radius: 4px;
-    margin-left: 5px;;
+    margin-left: 5px;
+}
+.filter-icon{
+    display: none;
 }
 input{
     border:0px;
@@ -35,7 +39,7 @@ input:focus{
 .filters{
     display: flex;
     flex-direction: column;
-    width:20%;
+    width:12%;
     padding: 15px;
     margin:25px;
     font-weight:500;
@@ -66,24 +70,36 @@ header{
 }
 .products{
     display: grid;
-    grid-template-columns:1fr 1fr 1fr 1fr;
+    grid-template-columns:1fr 1fr 1fr;
+    grid-auto-rows: auto;
     grid-gap: 25px;
     overflow: auto;
     height: 100vh;
 }
 
+/* CARD-CSS */
 .card{
     box-shadow: 0px 0px 5px 5px  rgb(230, 224, 224);
     border-radius: 5px;
-    padding: 5px;
+    padding: 14px ;
+    height: 280px;
 }
 .card-footer{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 5px 15px;
 }
+
+.card-image{
+    width:100%;
+    height: 200px;
+    margin-bottom: 16px;
+}
 .card-image img{
-    max-width: 100%; height: auto; 
+     height: 100%;
+     width: 100%;
+     object-fit: contain; 
 }
 .add-btn{
     border-radius: 5px;
@@ -91,6 +107,7 @@ header{
     color: white;
     border: none;
     cursor: pointer;
+    padding: 12px 16px;
 }
 .badge:after{
     content:attr(value);
@@ -153,24 +170,30 @@ header{
     justify-content: center;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:968px) {
     .products{
-        grid-template-columns:1fr 1fr 1fr;
+        grid-template-columns:1fr 1fr;
+        
+        /* width:calc(25%-10px) */
+    }
+    
+    .filter-icon{
+        display: block;
     }
 }
 @media screen and (max-width:576px) {
     .products{
-        grid-template-columns:1fr 1fr;
+        grid-template-columns:1fr;
     }
     .nav{
         font-size: 20px;
     }
 }
-@media screen and (max-width:420px) {
+/* @media screen and (max-width:420px) {
     .products{
         grid-template-columns:1fr;
     }
     .nav{
         font-size: 15px;
     }
-}
+} */
